--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tailwind-scrollbar-hide/v4";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 body,
 html,
 #root {
